[package]
name = "serial_thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2.0"
log = "0.4.21"
serial = "0.4.0"
serialport = "4.3.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
