[package]
name = "serial-thread"
version = "0.0.6"
authors = ["pythcoiner <pythcoiner@proton.me>"]
edition = "2021"
readme = "README.md"
description = "Asynchronous, multithreaded serial port communication library using mpsc::cjhannels or async-channels for efficient data handling."
repository = "https://github.com/pythcoiner/serial-thread-rust"
documentation = "https://docs.rs/serial-thread"
license = "MIT"
keywords = ["serial", "async", "multithreaded", "communication"]
categories = ["asynchronous", "hardware-support"]

[dependencies]
async-channel = "2.2.0"
log = "0.4.21"
serial = "0.4.0"
serialport = "4.3.0"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "time"] }

[features]
async-channel = []
